fix bug: css, clear property overflow

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
     height: 100vh;
     display: grid;
     grid-template-areas: "nav content";
-    overflow-x: hidden;
 }
 
 /* navbar */
